tests/baselines/reference/checkJsdocSatisfiesTag14.errors.txt
/a.js(7,15): error TS1005: '{' expected.
/a.js(8,2): error TS1005: '}' expected.
/a.js(10,27): error TS1005: '{' expected.
/a.js(10,30): error TS1005: '}' expected.


==== /a.js (4 errors) ====
    /**
     * @typedef {Object} T1
     * @property {number} a
     */
    
    /**
     * @satisfies T1
                  ~~
!!! error TS1005: '{' expected.
     */
     
!!! error TS1005: '}' expected.
    const t1 = { a: 1 };
    const t2 = /** @satisfies T1 */ ({ a: 1 });
                              ~~
!!! error TS1005: '{' expected.
                                 
!!! error TS1005: '}' expected.
    